--- a/src/main/webapp/app/entities/payment/detail/payment-detail.component.html
+++ b/src/main/webapp/app/entities/payment/detail/payment-detail.component.html
@@ -16,7 +16,7 @@
         </dd>
         <dt><span jhiTranslate="sellphonealamApp.payment.orderDetailID">Order Detail ID</span></dt>
         <dd>
-          <span>{{ payment.orderDetailID }}</span>
+          <span>{{ payment.orderID }}</span>
         </dd>
         <dt><span jhiTranslate="sellphonealamApp.payment.bankID">Bank ID</span></dt>
         <dd>
