--- a/src/main/webapp/app/entities/payment/list/payment.component.html
+++ b/src/main/webapp/app/entities/payment/list/payment.component.html
@@ -50,7 +50,7 @@
           <td>
             <a [routerLink]="['/payment', payment.id, 'view']">{{ payment.id }}</a>
           </td>
-          <td>{{ payment.orderDetailID }}</td>
+          <td>{{ payment.orderID }}</td>
           <td>{{ payment.bankID }}</td>
           <td>{{ payment.status }}</td>
           <td class="text-right">
