--- a/src/main/webapp/app/entities/voucher/list/voucher.component.html
+++ b/src/main/webapp/app/entities/voucher/list/voucher.component.html
@@ -1,114 +1,61 @@
-<div>
-  <h2 id="page-heading" data-cy="VoucherHeading">
-    <span jhiTranslate="sellphonealamApp.voucher.home.title">Vouchers</span>
-
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info mr-2" (click)="loadPage()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="sellphonealamApp.voucher.home.refreshListLabel">Refresh List</span>
-      </button>
-
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-voucher"
-        [routerLink]="['/voucher/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="sellphonealamApp.voucher.home.createLabel"> Create a new Voucher </span>
-      </button>
+<div class="col-12 p-0 mt-4">
+  <div class="col">
+    <h2 style="font-size: 25px; font-family: Verdana, Geneva, Tahoma, sans-serif; text-decoration: underline">Quản lí mã giảm</h2>
+    <div class="m-2" *ngIf="isLoading">
+      <div class="pull-right label label-info row col" style="min-height: 700px !important">
+        <!-- <div class="loader"></div> -->
+        <div
+          class="spinner-border"
+          role="status"
+          style="margin: auto; width: 6em; height: 6em; border: 0.7em solid black currentColor"
+        ></div>
+      </div>
     </div>
-  </h2>
-
-  <jhi-alert-error></jhi-alert-error>
-
-  <jhi-alert></jhi-alert>
-
-  <div class="alert alert-warning" id="no-result" *ngIf="vouchers?.length === 0">
-    <span jhiTranslate="sellphonealamApp.voucher.home.notFound">No vouchers found</span>
-  </div>
-
-  <div class="table-responsive" id="entities" *ngIf="vouchers && vouchers.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadPage.bind(this)">
-          <th scope="col" jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="voucherCode">
-            <span jhiTranslate="sellphonealamApp.voucher.voucherCode">Voucher Code</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="productID">
-            <span jhiTranslate="sellphonealamApp.voucher.productID">Product ID</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="promotionPrice">
-            <span jhiTranslate="sellphonealamApp.voucher.promotionPrice">Promotion Price</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="dateIssue">
-            <span jhiTranslate="sellphonealamApp.voucher.dateIssue">Date Issue</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="status">
-            <span jhiTranslate="sellphonealamApp.voucher.status">Status</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let voucher of vouchers; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/voucher', voucher.id, 'view']">{{ voucher.id }}</a>
+    <div class="m-2">
+      <!--      <mat-form-field>-->
+      <!--        <mat-label>Tìm kiếm</mat-label>-->
+      <!--        <input matInput type="text" (keyup)="search($event)" />-->
+      <!--      </mat-form-field>-->
+      <button mat-raised-button color="primary" style="float: right; margin-bottom: 18px; margin-right: 16px" (click)="addNew()">
+        Thêm mã giảm
+      </button>
+      <table mat-table [dataSource]="listData" matSort class="mat-elevation-z8" style="width: 1383px">
+        <ng-container matColumnDef="voucherCode">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 7%">Mã voucher</th>
+          <td mat-cell *matCellDef="let row">{{ row.voucherCode }}</td>
+        </ng-container>
+        <ng-container matColumnDef="promotionRate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 19%">Phần trăm giảm</th>
+          <td mat-cell *matCellDef="let row">{{ row.promotionRate }}%</td>
+        </ng-container>
+        <ng-container matColumnDef="dateIssue">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 8%">Ngày hiệu lực</th>
+          <td mat-cell *matCellDef="let row">{{ row.dateIssue }} ngày</td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 5%">Hoạt động</th>
+          <td mat-cell *matCellDef="let row">{{ row.status ? 'Đang hoạt động' : 'Hết hạn' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="edit">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">Sửa</th>
+          <td mat-cell *matCellDef="let row">
+            <a>
+              <fa-icon [icon]="'wrench'" [size]="'2x'" (click)="edit(row)" tooltip="Sửa"></fa-icon>
+            </a>
           </td>
-          <td>{{ voucher.voucherCode }}</td>
-          <td>{{ voucher.productID }}</td>
-          <td>{{ voucher.promotionPrice }}</td>
-          <td>{{ voucher.dateIssue | formatMediumDate }}</td>
-          <td>{{ voucher.status }}</td>
-          <td class="text-right">
-            <div class="btn-group">
-              <button
-                type="submit"
-                [routerLink]="['/voucher', voucher.id, 'view']"
-                class="btn btn-info btn-sm"
-                data-cy="entityDetailsButton"
-              >
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-              </button>
-
-              <button
-                type="submit"
-                [routerLink]="['/voucher', voucher.id, 'edit']"
-                class="btn btn-primary btn-sm"
-                data-cy="entityEditButton"
-              >
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-              </button>
-
-              <button type="submit" (click)="delete(voucher)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-              </button>
-            </div>
+        </ng-container>
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">Xoá</th>
+          <td mat-cell *matCellDef="let row">
+            <a>
+              <fa-icon [icon]="'trash'" [size]="'2x'" (click)="delete(row.id, row.name)" tooltip="Xóa"></fa-icon>
+            </a>
           </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div *ngIf="vouchers && vouchers.length > 0">
-    <div class="row justify-content-center">
-      <jhi-item-count [params]="{ page: page, totalItems: totalItems, itemsPerPage: itemsPerPage }"></jhi-item-count>
-    </div>
-
-    <div class="row justify-content-center">
-      <ngb-pagination
-        [collectionSize]="totalItems"
-        [(page)]="ngbPaginationPage"
-        [pageSize]="itemsPerPage"
-        [maxSize]="5"
-        [rotate]="true"
-        [boundaryLinks]="true"
-        (pageChange)="loadPage($event)"
-      ></ngb-pagination>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="columns"></tr>
+        <tr mat-row *matRowDef="let row; columns: columns"></tr>
+      </table>
+      <mat-paginator [length]="productsLength" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"> </mat-paginator>
     </div>
   </div>
 </div>
