--- a/src/main/webapp/app/entities/product/list/product.component.html
+++ b/src/main/webapp/app/entities/product/list/product.component.html
@@ -1,142 +1,75 @@
-<div>
-  <h2 id="page-heading" data-cy="ProductHeading">
-    <span jhiTranslate="sellphonealamApp.product.home.title">Products</span>
-
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info mr-2" (click)="loadPage()" [disabled]="isLoading">
-        <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span jhiTranslate="sellphonealamApp.product.home.refreshListLabel">Refresh List</span>
-      </button>
-
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-product"
-        [routerLink]="['/product/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="sellphonealamApp.product.home.createLabel"> Create a new Product </span>
-      </button>
+<div class="col-12 p-0 mt-4">
+  <div class="col">
+    <h2 style="font-size: 25px; font-family: Verdana, Geneva, Tahoma, sans-serif; text-decoration: underline">Quản lí sản phẩm</h2>
+    <div class="m-2" *ngIf="isLoading">
+      <div class="pull-right label label-info row col" style="min-height: 700px !important">
+        <!-- <div class="loader"></div> -->
+        <div
+          class="spinner-border"
+          role="status"
+          style="margin: auto; width: 6em; height: 6em; border: 0.7em solid black currentColor"
+        ></div>
+      </div>
     </div>
-  </h2>
-
-  <jhi-alert-error></jhi-alert-error>
-
-  <jhi-alert></jhi-alert>
-
-  <div class="alert alert-warning" id="no-result" *ngIf="products?.length === 0">
-    <span jhiTranslate="sellphonealamApp.product.home.notFound">No products found</span>
-  </div>
-
-  <div class="table-responsive" id="entities" *ngIf="products && products.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-      <thead>
-        <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadPage.bind(this)">
-          <th scope="col" jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col" jhiSortBy="code">
-            <span jhiTranslate="sellphonealamApp.product.code">Code</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="name">
-            <span jhiTranslate="sellphonealamApp.product.name">Name</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="quantity">
-            <span jhiTranslate="sellphonealamApp.product.quantity">Quantity</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="unitPrice">
-            <span jhiTranslate="sellphonealamApp.product.unitPrice">Unit Price</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="installment">
-            <span jhiTranslate="sellphonealamApp.product.installment">Installment</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="accompanyingProducts">
-            <span jhiTranslate="sellphonealamApp.product.accompanyingProducts">Accompanying Products</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="warranty">
-            <span jhiTranslate="sellphonealamApp.product.warranty">Warranty</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="createdDate">
-            <span jhiTranslate="sellphonealamApp.product.createdDate">Created Date</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="modifiedDate">
-            <span jhiTranslate="sellphonealamApp.product.modifiedDate">Modified Date</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="createdUser">
-            <span jhiTranslate="sellphonealamApp.product.createdUser">Created User</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="modifiedUser">
-            <span jhiTranslate="sellphonealamApp.product.modifiedUser">Modified User</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col" jhiSortBy="status">
-            <span jhiTranslate="sellphonealamApp.product.status">Status</span> <fa-icon icon="sort"></fa-icon>
-          </th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let product of products; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/product', product.id, 'view']">{{ product.id }}</a>
+    <div class="m-2">
+      <!--      <mat-form-field>-->
+      <!--        <mat-label>Tìm kiếm</mat-label>-->
+      <!--        <input matInput type="text" (keyup)="search($event)" />-->
+      <!--      </mat-form-field>-->
+      <button mat-raised-button color="primary" style="float: right; margin-bottom: 18px; margin-right: 16px" (click)="addNew()">
+        Thêm sản phẩm
+      </button>
+      <table mat-table [dataSource]="listData" matSort class="mat-elevation-z8" style="width: 1383px">
+        <ng-container matColumnDef="image">
+          <th mat-header-cell *matHeaderCellDef style="width: 10%"></th>
+          <td mat-cell *matCellDef="let row">
+            <img [src]="row.image" width="60px" class="p-1" />
           </td>
-          <td>{{ product.code }}</td>
-          <td>{{ product.name }}</td>
-          <td>{{ product.quantity }}</td>
-          <td>{{ product.unitPrice }}</td>
-          <td>{{ product.installment }}</td>
-          <td>{{ product.accompanyingProducts }}</td>
-          <td>{{ product.warranty }}</td>
-          <td>{{ product.createdDate | formatMediumDate }}</td>
-          <td>{{ product.modifiedDate | formatMediumDate }}</td>
-          <td>{{ product.createdUser }}</td>
-          <td>{{ product.modifiedUser }}</td>
-          <td>{{ product.status }}</td>
-          <td class="text-right">
-            <div class="btn-group">
-              <button
-                type="submit"
-                [routerLink]="['/product', product.id, 'view']"
-                class="btn btn-info btn-sm"
-                data-cy="entityDetailsButton"
-              >
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-              </button>
-
-              <button
-                type="submit"
-                [routerLink]="['/product', product.id, 'edit']"
-                class="btn btn-primary btn-sm"
-                data-cy="entityEditButton"
-              >
-                <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-              </button>
-
-              <button type="submit" (click)="delete(product)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
-                <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-              </button>
-            </div>
+        </ng-container>
+        <ng-container matColumnDef="code">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 7%">Mã sản phẩm</th>
+          <td mat-cell *matCellDef="let row">{{ row.code }}</td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 19%">Tên sản phẩm</th>
+          <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+        </ng-container>
+        <ng-container matColumnDef="unitPrice">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 8%">Giá</th>
+          <td mat-cell *matCellDef="let row">{{ row.unitPrice | currency: 'VND' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="installment">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 5%">Trả góp</th>
+          <td mat-cell *matCellDef="let row">{{ row.installment }}%</td>
+        </ng-container>
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 9%">Nhãn hiệu</th>
+          <td mat-cell *matCellDef="let row">{{ row.nameManufacturer }}</td>
+        </ng-container>
+        <ng-container matColumnDef="createdDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%">Ngày thêm</th>
+          <td mat-cell *matCellDef="let row">{{ row.createdDate | date: 'dd-MM-yyyy' }}</td>
+        </ng-container>
+        <ng-container matColumnDef="view">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">Sửa</th>
+          <td mat-cell *matCellDef="let row">
+            <a>
+              <fa-icon [icon]="'wrench'" [size]="'2x'" (click)="edit(row)" tooltip="Sửa"></fa-icon>
+            </a>
           </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <div *ngIf="products && products.length > 0">
-    <div class="row justify-content-center">
-      <jhi-item-count [params]="{ page: page, totalItems: totalItems, itemsPerPage: itemsPerPage }"></jhi-item-count>
-    </div>
-
-    <div class="row justify-content-center">
-      <ngb-pagination
-        [collectionSize]="totalItems"
-        [(page)]="ngbPaginationPage"
-        [pageSize]="itemsPerPage"
-        [maxSize]="5"
-        [rotate]="true"
-        [boundaryLinks]="true"
-        (pageChange)="loadPage($event)"
-      ></ngb-pagination>
+        </ng-container>
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">Xoá</th>
+          <td mat-cell *matCellDef="let row">
+            <a>
+              <fa-icon [icon]="'trash'" [size]="'2x'" (click)="delete(row.id, row.name)" tooltip="Xóa"></fa-icon>
+            </a>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="columns"></tr>
+        <tr mat-row *matRowDef="let row; columns: columns"></tr>
+      </table>
+      <mat-paginator [length]="productsLength" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"> </mat-paginator>
     </div>
   </div>
 </div>
