--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -2,6 +2,7 @@
 @import '~bootstrap/scss/functions';
 @import '~bootswatch/dist/darkly/variables';
 @import '~bootstrap/scss/variables';
+@import '~ngx-toastr/toastr.css';
 
 //style import by anhlam
 @import '../css/style.css';
